fix flex wrap data types

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ padding: 4px 0;
        justify-content: center;
        padding: 10px;
        gap: 10px;
+       flex-wrap: wrap;
 }
 .type-info{
      flex: 1;
